--- a/sketches/index.html
+++ b/sketches/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>SamanpaiiiiArt</title>
+<title>Samanpaiiii</title>
+<link rel="icon" href="red-heart.png" type="image/png" sizes="16x16">
 <link rel="stylesheet" type="text/css" media="screen" href="res/css/style.css"/>
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400italic,400,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script type="text/javascript" src="slider.js"></script>
 </head>
