icon added at every page

--- a/bestpresentationever/index.html
+++ b/bestpresentationever/index.html
@@ -1,1 +1,3 @@
+<title>Samanpaiii</title>
+<link rel="icon" href="red-heart.png" type="image/png" sizes="16x16">
 <iframe src="Cool presentation.pdf" style="width:100%; height:100%;" frameborder="0"  />
