--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<title>Samanpaiii</title>
+<link rel="icon" href="red-heart.png" type="image/png" sizes="16x16">
 <link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
 <body background="bg.png">
 <table width="100%" height="100%" >
