--- a/tu-tu-ru/index.html
+++ b/tu-tu-ru/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Samanpaiii</title>
-  <link rel="icon" href="demo_icon.gif" type="image/gif" sizes="16x16">
+  <link rel="icon" href="red-heart.png" type="image/png" sizes="16x16">
   <style type="text/css">
     body {
       margin: 0;
